rename environment variables

--- a/README.Rmd
+++ b/README.Rmd
@@ -40,15 +40,15 @@ remotes::install_github("rlesur/apinsee")
 
 Créez une application ayant accès à l'API Sirene sur le site [api.insee.fr](https://api.insee.fr/) : voir [l'aide](https://api.insee.fr/catalogue/site/themes/wso2/subthemes/insee/pages/help.jag).
 
-Sauvegardez la clef du consommateur dans la variable d'environnement `INSEE_API_KEY` et le secret du consommateur dans la variable d'environnement `INSEE_API_SECRET` : la méthode la plus sûre est d'enregistrer ces deux variables d'environnement dans votre fichier `.Renviron`. 
+Sauvegardez la clef du consommateur dans la variable d'environnement `INSEE_APP_KEY` et le secret du consommateur dans la variable d'environnement `INSEE_APP_SECRET` : la méthode la plus sûre est d'enregistrer ces deux variables d'environnement dans votre fichier `.Renviron`. 
 
 Pour accéder facilement au fichier `.Renviron`, vous pouvez utiliser la commande `usethis::edit_r_environ("user")`. 
 
 Ajoutez ces deux lignes dans votre fichier `.Renviron` :
 
 ```{bash, eval=FALSE}
-INSEE_API_KEY=xxxxxxxxxxxxxxxxxx    # clef du consommateur
-INSEE_API_SECRET=yyyyyyyyyyyyyyyyyy # secret du consommateur
+INSEE_APP_KEY=xxxxxxxxxxxxxxxxxx    # clef du consommateur
+INSEE_APP_SECRET=yyyyyyyyyyyyyyyyyy # secret du consommateur
 ```
 
 Sauvegardez ce fichier et **redémarrez votre session R**.
