--- a/README.Rmd
+++ b/README.Rmd
@@ -91,7 +91,7 @@ Dès lors, votre utilisateur (s'il renseigne les variables d'environnement préc
 requete_siren_unitaire(siren = "005520135", date = Sys.Date())
 ```
 
-Dans le cas où votre utilisateur ne souhaiterait pas renseigner les variables d'environnement, il devra préalablement s'authentifier en exécutant :
+Dans le cas où votre utilisateur ne souhaiterait pas renseigner les variables d'environnement, il devra préalablement s'authentifier en exécutant (**attention, cette pratique n'est pas à recommander car la paire clef/secret ne devrait jamais apparaître dans un programme**) :
 
 ```{r, eval=FALSE}
 apinsee::insee_auth(
