--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/apinsee)](https://cran.r-project.org/package=apinsee)
 <!-- badges: end -->
 
-**apinsee** est un package pour le langage R destiné à faciliter l'authentification aux API de l'Insee accessibles à l'adresse [api.insee.fr](https://api.insee.fr/).
+**apinsee** est un package pour le langage R destiné à faciliter l'authentification aux API de l'Insee accessibles à l'adresse [api.insee.fr](https://api.insee.fr/). **apinsee** suit notamment les recommandations d'utilisation des API de l'Insee, notamment l'utilisation de jetons d'accès ayant une durée de validité maximale de 24 heures.
 
 ## Avertissement
 
@@ -38,7 +38,7 @@ remotes::install_github("rlesur/apinsee")
 
 ### Créer une application
 
-Créez une application ayant accès à l'API Sirene sur le site [api.insee.fr](https://api.insee.fr/) : voir [l'aide](https://api.insee.fr/catalogue/site/themes/wso2/subthemes/insee/pages/help.jag).
+Créez une application sur le site [api.insee.fr](https://api.insee.fr/) : voir [l'aide](https://api.insee.fr/catalogue/site/themes/wso2/subthemes/insee/pages/help.jag).
 
 Sauvegardez la clef du consommateur dans la variable d'environnement `INSEE_APP_KEY` et le secret du consommateur dans la variable d'environnement `INSEE_APP_SECRET` : la méthode la plus sûre est d'enregistrer ces deux variables d'environnement dans votre fichier `.Renviron`. 
 
@@ -53,7 +53,7 @@ INSEE_APP_SECRET=yyyyyyyyyyyyyyyyyy # secret du consommateur
 
 Sauvegardez ce fichier et **redémarrez votre session R**.
 
-### Créer un jeton d'accès
+### Créer et utiliser un jeton d'accès
 
 Le package **apinsee** ne comprend qu'une fonction utile : `insee_auth()`. Cette fonction permet de récupérer un jeton d'accès à votre application. Ce jeton d'accès peut être affecté à un objet et est sauvegardé de façon interne dans votre session R. Vous pouvez donc simplement exécuter la fonction :
 
@@ -61,9 +61,18 @@ Le package **apinsee** ne comprend qu'une fonction utile : `insee_auth()`. Cette
 token <- apinsee::insee_auth()
 ```
 
-Les jetons d'accès ayant une durée de validité limitée, cette fonction permet de récupérer automatiquement un jeton valide. 
+Les jetons d'accès ayant une durée de validité limitée, cette fonction permet de récupérer automatiquement un jeton valide.
 
-### Intégrer **apinsee** 
+Ce token peut ensuite être utilisé comme valeur du paramètre `token` de la fonction `httr::config()` :
+
+```{r, eval=FALSE}
+library(httr)
+set_config(config(token = token))
+```
+
+Dès lors, vous pouvez accéder aux API de l'Insee auxquelles votre application a souscrites.
+
+## Utiliser **apinsee** dans votre package 
 
 Imaginons que vous souhaitiez développer un package qui accède à l'API Sirene. Vous pouvez créer la fonction suivante :
 
@@ -85,7 +94,7 @@ requete_siren_unitaire <- function(
 
 ```
 
-Dès lors, votre utilisateur (s'il renseigne les variables d'environnement précédentes) aura à simplement exécuter la fonction `requete_sirene_unitaire()` de votre package : 
+Dès lors, votre utilisateur (s'il utilise une application ayant souscrit à l'API Sirene) aura à simplement exécuter la fonction `requete_sirene_unitaire()` de votre package : 
 
 ```{r}
 requete_siren_unitaire(siren = "005520135", date = Sys.Date())
@@ -109,4 +118,3 @@ options(apinsee.url = "adresse.de.la.plateforme")
 ```
 
 Il n'y a rien d'autre à modifier dans vos programmes.
-
