détaille l'option apinsee.url

--- a/README.Rmd
+++ b/README.Rmd
@@ -108,10 +108,16 @@ requete_siren_unitaire(siren = "005520135", date = Sys.Date())
 
 ## Utilisation interne à l'Insee
 
-**apinsee** peut également être utilisé au sein de l'Insee pour les agents qui souhaiteraient accéder aux plateformes de test, recette ou pré-production. Le plus simple est de modifier l'option `apinsee.url` de la façon suivante :
+**apinsee** peut également être utilisé au sein de l'Insee pour les agents qui souhaiteraient accéder aux plateformes de test, recette ou pré-production. Le plus simple est de modifier l'option `apinsee.url`. La valeur par défaut de l'option `apinsee.url` est :
+
+```{r}
+getOption("apinsee.url")
+```
+
+Il vous suffit donc de rajouter avant d'exécuter vos scripts :
 
 ```{r, eval=FALSE}
 options(apinsee.url = "adresse.de.la.plateforme")
 ```
 
-Il n'y a rien d'autre à modifier dans vos programmes.
+Il s'agit de la seule modification à apporter à vos programmes.
