--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ L'objectif du package **apinsee** est de faciliter la gestion et l'utilisation d
 Vous pouvez installer la version de développement depuis [GitHub](https://github.com/) en exécutant :
 
 ``` r
-remotes::install_github("rlesur/apinsee")
+remotes::install_github("inseefrlab/apinsee")
 ```
 ## Exemple
 
