add license badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 [![Travis build status](https://travis-ci.org/InseeFrLab/apinsee.svg?branch=master)](https://travis-ci.org/InseeFrLab/apinsee)
 [![Codecov test coverage](https://codecov.io/gh/InseeFrLab/apinsee/branch/master/graph/badge.svg)](https://codecov.io/gh/InseeFrLab/apinsee?branch=master)
 [![CRAN status](https://www.r-pkg.org/badges/version/apinsee)](https://cran.r-project.org/package=apinsee)
+[![License:MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
 <!-- badges: end -->
 
 **apinsee** est un package pour le langage R destiné à faciliter l'authentification aux API de l'Insee accessibles à l'adresse [api.insee.fr](https://api.insee.fr/).
