--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ knitr::opts_chunk$set(
 
 Comme toutes les API modernes, l'utilisation des API de l'Insee requiert d'utiliser une procédure d'authentification et de récupérer un jeton d'accès. Le site [api.insee.fr](https://api.insee.fr/) recommande d'utiliser un nouveau jeton d'accès toutes les 24 heures. 
 
-L'objectif du package **apinsee** est de faciliter la gestion et l'utilisation de ces jetons d'accès conformément à ces recommandations. 
+L'objectif du package **apinsee** est de faciliter la gestion et l'utilisation de ces jetons d'accès conformément à ces recommandations : il permet de récupérer automatiquement, depuis R, un nouveau jeton d'accès valide pour une durée de 24 heures.
 
 ## Installation
 
